# hourglasstensorflow

./: .docstr.yaml  .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  LICENCE  LICENSE  Pipfile  README.md  README.txt  Taskfile.yml  config.cfg  configTiny.cfg  datagen.py  filters.py  formatAndScale.py  hourglassModel.py  hourglass_tiny.py  hourglass_tiny_testing.py  inference.py  layers.py  net.py  params.py  predictClass.py  process.py  pyproject.toml  requirements.txt  tools.py  train_launcher.py  trainer.py  yolo_net.py  yolo_tiny_net.py
.github/: SEMVER.md
.github/workflows/: python-publish.yaml  python-release.yaml  python-test.yaml
ci/: changelog.py  commit_parser.py  pre_commit_command.sh  publish.sh  readme.py
cli/: __init__.py  model.py  mpii.py
config/: __init__.py  config.cfg  config.default.yaml  hpeDefault.yml  hpeDefault_kernel.yml  train.default.json  train.default.toml  train.default.yaml
config/default/: model_config.cfg
data/: DATA.md
deprecated/: config.cfg  hourglass_tiny.py  p4frames.mat  predictClass.py  train_launcher.py
deprecated/v0.1/: layers.py  process.py  trainer.py
doc/source/: conf.py  configfile.md  hourglass_tensorflow.utils.parsers.md  hourglass_tensorflow.utils.sets.md  index.md
docs/: CONFIG.md  Makefile
docs/source/: cli.md  conf.py  config.md  configfile.md  handlers.md  hourglass_tensorflow.cli.md  hourglass_tensorflow.handlers.md  hourglass_tensorflow.layers.md  hourglass_tensorflow.losses.md  hourglass_tensorflow.md  hourglass_tensorflow.metrics.md  hourglass_tensorflow.models.md  hourglass_tensorflow.types.config.md  hourglass_tensorflow.types.md  hourglass_tensorflow.utils.md  index.md  installation.md  modules.md  quickstart.md
examples/: A_convert_data_to_htf.py  B_explore_htf_data.py  B_prepare_htf_data.py  C_train_model.py
hourglass/: hourglass_model.py
hourglass_tensorflow/: __init__.py  types.py
hourglass_tensorflow/cli/: __init__.py  model.py  mpii.py
hourglass_tensorflow/datasets/: _meta.py  (+2 more)
libs/: dataset.py  hourglass_model.py  layers.py  metrics.py  tf_functions.py
logs/: LOGS.txt
models/: MODELS.txt
notebooks/: 01 - Parsing MPII Dataset.ipynb  02 - Construct TF Dataset.ipynb  02 - Prepare Data.ipynb  02A - Construct TF Dataset - First Iteration.ipynb  02B - Construct TF Dataset - Bounding Boxes.ipynb  03 - Illustration of Model.ipynb  04 - Training.ipynb  Demonstration notebook.ipynb
reports/: .coverage
scripts/: convert_data_to_htf.py
tests/: test_losses.py  test_metrics.py  test_model_params.py  test_tf_functions.py  test_utils.py
utils/: __init__.py  argmax_funcs.py  config.py  decorators.py  mpii_mat_handler.py
v0.1/: hourglassModel.py  params.py  tools.py
(+83 files in other folders)
