[tool.poetry]
name = "hourglass_tensorflow"
version = "0.0.0"
description = "Tensorflow implementation of Stacked Hourglass Networks for Human Pose Estimation"
authors = ["wbenbihi <waligoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
